steg 2/assets/scss/_pages.scss
/* ... */
main#about-content {
    .page-layout {
        p {
            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
        }
        
        .other-projects {
            .items {
                display: flex;
                flex-direction: column;
                gap: 5px;
                padding: 5px;

                .repo {
                    display: flex;
                    flex-direction: column;
                    gap: 2px;

                    background-color: #0000006a;
                    border-radius: 3px;
                    padding: 5px;
                    
                    div {
                        display: flex;
                        flex-direction: row;
                        justify-content: space-between;
                    }
                    a {
                        color: $main-color;
                    }
                    .updated-at {
                        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
                    }
                }
            }
        }
    }
}

